@@ -109,6 +109,10 @@ double erand48(randbuf buf) __THROW;
 
 __attribute__((__callback(4, 1, 1)))
 void qsort(void *base, size_t nmemb, size_t size, int (*compar)(const void *, const void *));
+#ifdef _GNU_SOURCE
+__attribute__((__callback(4, 1, 1)))
+void qsort_r(void *base, size_t nmemb, size_t size, int (*compar)(const void *, const void *, void *), void* cookie);
+#endif
 
 __attribute__((__callback(5, 1, 2)))
 __attribute__((__warn_unused_result__))
